--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>adanac-parent</artifactId>
 		<version>1.0.0</version>	
   </parent>
-  <groupId>com.adanac.commclient</groupId>
+  <groupId>com.adanac.commonclient</groupId>
   <artifactId>solr-client</artifactId>
   <packaging>jar</packaging>
 
